# ds-proj2

./: .gitmodules  CMakeLists.txt  DONTREADME.md  README.md  routes.csv
UI/: README.md  UI.py
data/: data_gen.py
doc/img/: v1.drawio  v2.drawio  v3.drawio
src/: base.hpp  data_gen.py  eval.hpp  event.hpp  log.hpp  main.cpp  ref.cpp  rust.hpp  sim.cpp  sim.hpp  strategy.cpp  strategy.hpp
src/strategy/: v1.cpp  v1.hpp  v2.cpp  v2.hpp  v3.cpp  v3.hpp
